--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/node": "^18.11.12",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -40,6 +41,14 @@
     "endOfLine": "lf",
     "printWidth": 80,
     "singleQuote": false,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "importOrder": [
+      "^react(.*)",
+      "primereact/(.*)",
+      "<THIRD_PARTY_MODULES>",
+      "@/(.*)",
+      "^[./]"
+    ],
+    "importOrderSeparation": true
   }
 }
